--- a/index.html
+++ b/index.html
@@ -21,61 +21,73 @@
     <div class="content">
         <ul class="gallery" id="gallery">
             <li class="gallery__item">
+                <p class="text_img">Самуправляемый паровоз, 330 г. до н.э.</p>
                 <img src="./images/1.png" class="image">
                 <img class="like" src="./images/Like.svg" alt="Like" title="поставить лайк">
                 <img class="choosen" src="./images/Choosen.svg" alt="Choosen">
             </li>
             <li class="gallery__item">
+                <p class="text_img">Девушка с цветами</p>
                 <img src="./images/2.png" class="image">
                 <img class="like" src="./images/Like.svg" alt="Like" title="поставить лайк">
                 <img class="choosen" src="./images/Choosen.svg" alt="Choosen">
             </li>
             <li class="gallery__item">
+                <p class="text_img">Повелитель времени</p>
                 <img src="./images/3.png" class="image">
                 <img class="like" src="./images/Like.svg" alt="Like" title="поставить лайк">
                 <img class="choosen" src="./images/Choosen.svg" alt="Choosen">
             </li>
             <li class="gallery__item">
+                <p class="text_img">Отец повелителя времени</p>
                 <img src="./images/4.png" class="image">
                 <img class="like" src="./images/Like.svg" alt="Like" title="поставить лайк">
                 <img class="choosen" src="./images/Choosen.svg" alt="Choosen">
             </li>
             <li class="gallery__item">
+                <p class="text_img">Настя, Алхимик, 96 лет</p>
                 <img src="./images/5.png" class="image">
                 <img class="like" src="./images/Like.svg" alt="Like" title="поставить лайк">
                 <img class="choosen" src="./images/Choosen.svg" alt="Choosen">
             </li>
             <li class="gallery__item">
+                <p class="text_img">Циклопы и стены</p>
                 <img src="./images/6.png" class="image">
                 <img class="like" src="./images/Like.svg" alt="Like" title="поставить лайк">
                 <img class="choosen" src="./images/Choosen.svg" alt="Choosen">
             </li>
             <li class="gallery__item">
+                <p class="text_img">Малтай</p>
                 <img src="./images/7.png" class="image">
                 <img class="like" src="./images/Like.svg" alt="Like" title="поставить лайк">
                 <img class="choosen" src="./images/Choosen.svg" alt="Choosen">
             </li>
             <li class="gallery__item">
+                <p class="text_img">Великая циклопская революция</p>
                 <img src="./images/8.png" class="image">
                 <img class="like" src="./images/Like.svg" alt="Like" title="поставить лайк">
                 <img class="choosen" src="./images/Choosen.svg" alt="Choosen">
             </li>
             <li class="gallery__item">
+                <p class="text_img">Просто женщина</p>
                 <img src="./images/9.png" class="image">
                 <img class="like" src="./images/Like.svg" alt="Like" title="поставить лайк">
                 <img class="choosen" src="./images/Choosen.svg" alt="Choosen">
             </li>
             <li class="gallery__item">
+                <p class="text_img">Первый испытатель джетпака</p>
                 <img src="./images/10.png" class="image">
                 <img class="like" src="./images/Like.svg" alt="Like" title="поставить лайк">
                 <img class="choosen" src="./images/Choosen.svg" alt="Choosen">
             </li>
             <li class="gallery__item">
+                <p class="text_img">Леонард</p>
                 <img src="./images/11.png" class="image">
                 <img class="like" src="./images/Like.svg" alt="Like" title="поставить лайк">
                 <img class="choosen" src="./images/Choosen.svg" alt="Choosen">
             </li>
             <li class="gallery__item">
+                <p class="text_img">Средневековье</p>
                 <img src="./images/12.png" class="image">
                 <img class="like" src="./images/Like.svg" alt="Like" title="поставить лайк">
                 <img class="choosen" src="./images/Choosen.svg" alt="Choosen">
